# metta-on-mork

./: .gitignore  Cargo.toml  LICENSE  README.md  SHOWCASE.md  justfile
demos/: .gitignore
demos/countdp/: REPORT.md  count_dp.py
demos/countdp/oracle/: fwd-only-hf9.dump
demos/countdp/run-hf12/: stratum-11.mm2  stratum-5.mm2
demos/countdp/run-hf9/: stratum-3.mm2  stratum-7.mm2  stratum-9.mm2
demos/exphalving/: REPORT.md  coverage_check.py  gen-fromNumber.mm2  gen-lte.mm2  mitm-balws-imim1-hf12.mm2  mitm-balws-jarr-hf12.mm2  mitm-balws-loowoz-hf18.mm2  mitm-ws-imim1-hf6.mm2  mitm-ws-jarr-hf6.mm2  mitm-ws-loowoz-hf12.mm2  rebalance_meet.py  run.py  verify_proof.py
demos/pcgraph/: .gitignore  README.md  check_pcgraph.py  derive_rules.py  driver.py
demos/pcgraph/oracle/: common.py  epc_ref.py  ipc_ref.py  ipc_report.json  jpc_ref.py  jpc_report.json  oracle_comparison.json  xor_error_based_reference.npz  xor_ipc_reference.npz  xor_jpc_reference.npz
demos/pcgraph/rules/: xor_tick.mm2
demos/plan/: REPORT.md  build_plan_programs.py  d08a-backward-d8.mm2  d08a-forward-d8.mm2  d08a-mitm-d8-f4-b4.mm2  d08b-backward-d8.mm2  d08b-forward-d8.mm2  d08b-mitm-d8-f4-b4.mm2  d12a-backward-d12.mm2  d12a-forward-d12.mm2  d12a-mitm-d12-f6-b6.mm2  d12b-backward-d12.mm2  d12b-forward-d12.mm2  d12b-mitm-d12-f6-b6.mm2  d16a-backward-d16.mm2  d16a-forward-d16.mm2  d16a-mitm-d16-f8-b8.mm2  d20a-backward-d20.mm2  d20a-forward-d20.mm2  d20a-mitm-d20-f10-b10.mm2  instances.json  plan_oracle.py  run_plan_measurements.py
demos/subsume/: REPORT.md  build_mitm_programs.py  build_subsume_programs.py  fwd-only-hf6.mm2  fwd-sub-only-hf6.mm2  run_coverage.py
demos/tqbf/: REPORT.md  qbf_oracle.py  stall_convict.py  tqbf_cegis.py  tqbf_v1.py  tqbf_v2.py
docs/: plot_readme_figures.py
examples/: arg_index.rs  conjunctive_join.rs  factorized_count.rs  mm2_exec.rs  parallel_load.rs  parallel_query.rs  process_calculus_step.rs  query_tabling.rs  query_warmup.rs  run_mm2.rs  scale_showcase.rs  semi_naive_step.rs  sharded_sweep.rs  shared_space_parallel.rs  showcase.rs
formal/: kani_decode_atom.rs
formal/verus/: BindingsWellFormed.rs
proptest-regressions/: lib.txt
src/: argindex.rs  lib.rs  priority.rs  william.rs
