[package]
name = "metta-on-mork"
version = "0.1.0"
edition = "2021"
description = "MORK kernel as an in-process Hyperon atomspace backend (Space/SpaceMut)"

[dependencies]
hyperon-atom = { path = "../hyperon-experimental/hyperon-atom" }
hyperon-space = { path = "../hyperon-experimental/hyperon-space" }
hyperon-common = { path = "../hyperon-experimental/hyperon-common" }
mork = { path = "../mork-integration/MORK/kernel" }
pathmap = { path = "../mork-integration/PathMap", features = ["jemalloc", "arena_compact", "nightly"] }
rayon = "1"

[dev-dependencies]
hyperon = { path = "../hyperon-experimental/lib", default-features = false, features = ["pkg_mgmt"] }
proptest = "1.11.0"
static_assertions = "1.1.0"
stateright = "0.31.0"

[features]
default = []
# Kernel opt-ins, passed through to the MORK dependency. Each is byte-identical
# to the default path by the kernel's own differentials; they change complexity,
# not answers.
semi-naive = ["mork/semi_naive_ic"]          # metta_calculus fixpoints match only the delta per round
leapfrog = ["mork/leapfrog"]                 # flat conjunctive exec bodies route to the WCO leapfrog join
factorized-aggregate = ["mork/factorized_aggregate"] # COUNT/SUM/MIN/MAX/AND exec sinks without enumerating the join
